--- a/bib/itip-refs.bib
+++ b/bib/itip-refs.bib
@@ -17,7 +17,7 @@
 
 @book{2000:bernardosmith,
     Title = {Bayesian Theory},
-    Author = {Bernardo, J.-M. and Smith, A.},
+    Author = {Bernardo, J. and Smith, A.},
     Publisher = {Wiley},
     Address = {Chichester},
     Year = {2000}}
