--- a/concluding.tex
+++ b/concluding.tex
@@ -207,7 +207,7 @@ would move $\ynu(\nnu)$ more slowly towards $\ttau(\x)$ as compared to $\ynu(\nn
 but for moderate degrees of \pdc, the faster movement of $\ynu(\nnl)$
 would be offset by the head start of $\yzu(\nzu)$.
 As the upper bound for $\yn$ is attained at $\ynu(\nnu)$
-if $\ttau(\x) < \yzu(\nzu)$ (i.e., data is in agreement with the prior assignements9,
+if $\ttau(\x) < \yzu(\nzu)$ (i.e., data is in agreement with the prior assignements),
 the effect of extra imprecision would only appear as soon as $\ynu(\nnl) > \ynu(\nnu)$.}
 
 However, it seems equally reasonable to choose $\yzu(\nzl) > \yzu(\nzu)$,
@@ -253,7 +253,7 @@ also with hierarchical models (Section~\ref{sec:hierarchical})?***
 ***e.g., new models for prior near-ignorance by Mangili-Benavoli 2013***
 
 
-***double role $\nz$, see Section~\ref{sec:ibbm-resume} here or in outlook???
+***double role $\nz$, see Section~\ref{sec:ibbm-resume} here, and again in outlook???
 
 
 
@@ -305,7 +305,13 @@ it might be interesting to see if rectangular sets or other shapes are good for 
 ***extend to coarse or imprecise data, which is a very important field:
 do not idealise also the data (we stopped idealising the prior already)!
 
-from isipta11 concluding:
+***from \textcite[4.4]{itip-statinf}
+Most models in generalised Bayesian inference rely on a precise sampling model,
+but the general framework also allows for imprecise sampling models \parencite[see, in particular,][\S 8.5]{1991:walley},
+also discussed under the notion of \emph{likelihood robustness} \parencite[e.g.,][]{2000:shyamalkumar} in the robust Bayesian framework.
+
+
+***from isipta11 concluding:
 \begin{small}
 For a deeper understanding of prior-data conflict, it may also be helpful
 to extend our methods to coarse data, in an analogous way to \textcite{2007:utkinaugustin} and
