--- a/isipta11.tex
+++ b/isipta11.tex
@@ -150,7 +150,7 @@ the sample proportion $s/n$, and potential prior data conflict is simply average
 
 Overcoming the dogma of precision, formulating generalised Bayes
 updating in this setting is straightforward. By Walley's Generalised
-Bayes Rule \parencite[\S 6]{1991:walley}%
+Bayes' Rule \parencite[\S 6]{1991:walley}%
 \footnote{For more details on the Generalised Bayes' Rule and the generalised Bayesian inference procedure,
 see Sections~\ref{sec:gbr} and \ref{sec:imprecisebayes}, respectively.}
 the imprecise prior $\MZ$, described by convex sets of precise prior distributions,
