diss: separate 3.2, cleaning other approaches based on conjugate priors

--- a/bib/other-refs.bib
+++ b/bib/other-refs.bib
@@ -595,3 +595,18 @@ url = "http://www.sciencedirect.com/science/article/pii/S0888613X12000862",
   year={1988}
 }
 
+@inproceedings{2013:mangilibenavoli,
+    Author = {Francesca Mangili and Alessio Benavoli},
+    Booktitle = {ISIPTA '13: Proceedings of the Eighth International Symposium on Imprecise Probabilities: Theories and Applications},
+    Editor = {Fabio Cozman and Thierry Denoeux and Sebastian Destercke and Teddy Seidenfeld},
+    pages = {***--***},
+    Title = {New prior near-ignorance models on the simplex},
+    Year = {2013}}
+
+@phdthesis{2011:rinderknecht:diss,
+    Author = {Simon Rinderknecht},
+    School = {ETH Zurich},
+    Title = {Contribution to the Use of Imprecise Scientific Knowledge in Decision Support},
+    Url = {http://dx.doi.org/10.3929/ethz-a-007313975}, 
+    Year = 2007}
+
