--- a/defs.tex
+++ b/defs.tex
@@ -70,6 +70,9 @@
 \def\ttau{\tilde{\tau}}
 \def\ttaux{\ttau(x)}
 
+\def\pz{\psi\uz}
+\def\pn{\psi\un}
+
 \def\Y{\mathcal{Y}}
 \def\YZ{\Y\uz}
 \def\YN{\Y\un}
