--- a/diss.tex
+++ b/diss.tex
@@ -64,6 +64,7 @@
 %\part{Generalised Bayesian Inference with Sets of Priors}
   \include{genbayesinf}
   \include{setsofconjugatepriors}
+  \include{alternatives}
   \include{jstp}
   \include{isipta11}
 %  \include{football}
