--- a/zusammenfassung.tex
+++ b/zusammenfassung.tex
@@ -1,5 +1,5 @@
 \selectlanguage{ngerman}
-\chapter*{Zusammenfassung}
+\chapter*{***Zusammenfassung}
 \addcontentsline{toc}{chapter}{\protect Zusammenfassung}
 
 ***Hier steht eine maximal einseitige Zusammenfassung der
